<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="5dp"
    android:layout_margin="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:src="@mipmap/me"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">
        <TextView
            android:id="@+id/nameTxt"
            android:paddingTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/lastTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/coming_txt"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            tools:textColor="@android:color/background_dark" />


    </LinearLayout>

    <TextView
        android:id="@+id/timeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="2dp"
        android:text="@string/txt_coming_time"
        android:textColor="@android:color/darker_gray"/>

</LinearLayout>
